src/sample/Errors/C0189.st_(not_implemented).st
// C0189: '{x}' expected instead of '{y}'
// SAMPLE: _xx := SBYTE#-1;
// This error will not be implemented because it is just a syntax error.